styles.css
body {
  font-family:cavolini;
  color:#333;
  background-color:lightgrey;
  margin:0;
  padding:0;
  line-height:1.6;
}
header {
  background-color:#4CAF50;
  color:white;
  padding:20px
  text-align:centre;
}
header h1 {
  margin:0;
  font-family:ALGERIAN;
  text-align:centre;
}
header h2 {
  margin:0;
  font-family:ALGERIAN;
  text-align:centre;
}

nav a { 
  color:white;
  text-decoration:none;
  margin:0 10px;
}
nav a:hover {
  text-decoration:underline;
}
main {
  padding:20px;
  max-width:800px;
  margin:0 auto;
}
main img {
  max-width:100%;
  height:auto;
  display:block;
  margin:20px 0;
}
footer {
background-color:#333;
color:white;
text-align:center;
padding:10px;
position:fixed;
bottom:0;
width:100%;
}
p {
  font-size:1.1em;
}
a {
  color:#4CAF50;
  text-decoration:none;
}
a:hover {
  text-decoration:underline;
}
img {
  border:5px solid #4CAF50;
  border-radius:10px;
}
main a[href^="mailto:"]{
  color:#ff5722;
  font-weight:bold;
}

